# marketpulse-ph

./: .gitignore  README.md  main.py  pyproject.toml
src/marketpulse/: config.py  main.py
src/marketpulse/domain/: __init__.py  models.py
src/marketpulse/services/: __init__.py  ingestor.py
